--- a/paintings.html
+++ b/paintings.html
@@ -30,7 +30,7 @@
         </div>
 
             <div class="col-md-3 container" id="photography">
-                <img src="img/paintings/fire.jpg" alt="a black and white picture of a coffee shop sign" class="image" >
+                <img src="img/paintings/fire.JPG" alt="a black and white picture of a coffee shop sign" class="image" >
                 <div class="overlay">
                     <div class="text"> |  fire  | </div>
                 </div>
