--- a/ceramics.html
+++ b/ceramics.html
@@ -12,7 +12,7 @@
 <div class="container-fluid">
     <div class="row row1">
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/crackle.jpg" alt="" class="image" >
+            <img src="img/ceramics/crackle.JPG" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  crackle | </div>
             </div>
@@ -20,14 +20,14 @@
 
 
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/bubble.jpg" alt="a blue fan reflected in the water" class="image" >
+            <img src="img/ceramics/bubble.jpg" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  bubble  | </div>
             </div>
         </div>
 
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/ramen.JPG" alt="a black and white picture of a coffee shop sign" class="image" >
+            <img src="img/ceramics/ramen.JPG" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  ramen  | </div>
             </div>
@@ -35,21 +35,21 @@
 
         <div class="row row2">
             <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/succulent.jpg" alt="a black and white photo of a bridge" class="image" >
+                <img src="img/ceramics/succulent.jpg" alt="" class="image" >
                 <div class="overlay">
                     <div class="text"> |  succulent | </div>
                 </div>
             </div>
 
             <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/mug.jpg" alt="a black and white picture of a coffee shop sign" class="image" >
+                <img src="img/ceramics/mug.jpg" alt="" class="image" >
                 <div class="overlay">
                     <div class="text"> |  mug  | </div>
                 </div>
             </div>
 
             <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/orchid.jpg" alt="a blue fan reflected in the water" class="image" >
+                <img src="img/ceramics/orchid.jpg" alt="" class="image" >
                 <div class="overlay">
                     <div class="text"> |  orchid  | </div>
                 </div>
