--- a/paintings.html
+++ b/paintings.html
@@ -32,7 +32,7 @@
             <div class="col-md-3 container" id="photography">
                 <img src="img/paintings/fire.JPG" alt="" class="image" >
                 <div class="overlay">
-                    <div class="text"> |  fire  | </div>
+                    <div class="text"> |  pause  | </div>
                 </div>
             </div>
 
