--- a/ceramics.html
+++ b/ceramics.html
@@ -29,7 +29,7 @@
         <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/ramen.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  ramen  | </div>
+                <div class="text"> |  flecks  | </div>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="col-md-4 container" id="photography">
                 <img src="img/ceramics/mug.jpg" alt="" class="image" >
                 <div class="overlay">
-                    <div class="text"> |  mug  | </div>
+                    <div class="text"> |  triangle  | </div>
                 </div>
             </div>
 
