--- a/photography.html
+++ b/photography.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
+    <h1>| &nbsp  photography  &nbsp |</h1>
 
 <div class="container-fluid">
 
