--- a/ceramics.html
+++ b/ceramics.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
+    <h1>| &nbsp  ceramics  &nbsp |</h1>
 
 <div class="container-fluid">
     <div class="row row1">
