--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<h1>| &nbsp  elyse voegeli  &nbsp |</h1>
-
+<a href="about.html"><h1>| &nbsp  elyse voegeli  &nbsp |</h1></a>
+    
 <div class="container-fluid">
     <div class="row row1">
         <div class="col-md-4 container" id="ceramics">
