--- a/about.html
+++ b/about.html
@@ -16,11 +16,14 @@
     i am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school
     </p>
 <p>
-    my coursework focuses on design, data visualization, and user experience, and how to leverage these to combat structural oppression
+    my coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy
 </p>
 <p>
     my design aesthetic centers around texture, contrast, <strong> color</strong>, and lines
 </p>
+    <p>
+        as an undergraduate, i studied feminist theory, queer theory, and critical race theory and i approach all of my work through these lenses
+    </p>
 
 </div>
 
