--- a/ceramics.html
+++ b/ceramics.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="row row2">
+        <div class="row rowbottom">
             <div class="col-md-4 container" id="photography">
                 <img src="img/ceramics/succulent.jpg" alt="" class="image" >
                 <div class="overlay">
