--- a/photography.html
+++ b/photography.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
             
-            <div class="row row3">
+            <div class="row rowbottom">
 
         <div class="col-md-6 container" id="photography">
             <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="image" >
