--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 <div class="container-fluid">
     <div class="row row1">
-        <div class="col-md-4 container" id="ceramics">
+        <div class="col-12 col-md-4 container" id="ceramics">
             <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
             <div class="overlay">
                 <div class="text"> |  ceramics  | </div>
@@ -22,7 +22,7 @@
         </div>
 
 
-        <div class="col-md-4 container" id="paintings">
+        <div class="col-12 col-md-4 container" id="paintings">
             <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image" >
             <div class="overlay">
                 <div class="text"> |  paintings  | </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="col-md-4 container" id="photography">
+        <div class="col-12 col-md-4 container" id="photography">
             <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image" >
             <div class="overlay">
                 <div class="text"> |  photography  | </div>
