--- a/ceramics.html
+++ b/ceramics.html
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
     <div class="row row1">
-        <div class="col-12 col-md-4 container" id="photography">
+        <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/crackle.JPG" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  crackle | </div>
@@ -21,14 +21,14 @@
         </div>
 
 
-        <div class="col-12 col-md-4 container" id="photography">
+        <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/bubble.jpg" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  bubble  | </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-4 container" id="photography">
+        <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/ramen.JPG" alt="" class="image" >
             <div class="overlay">
                 <div class="text"> |  flecks  | </div>
