--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <div class="text">
 <p>
-    i am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school
+    I am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school
     </p>
 <p>
     my coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy
@@ -22,7 +22,7 @@
     my design aesthetic centers around texture, contrast, <strong> color</strong>, and lines
 </p>
     <p>
-        as an undergraduate, i studied feminist theory, queer theory, and critical race theory and i approach all of my work through these lenses
+        as an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses
     </p>
 
 </div>
