--- a/paintings.html
+++ b/paintings.html
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
 
-    <div class="row row1 align-items-center">
+    <div class="row rowbottom align-items-center">
 
 
 
