--- a/about.html
+++ b/about.html
@@ -13,16 +13,16 @@
 
 <div class="text">
 <p>
-    I am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school
+    I am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school.
     </p>
 <p>
-    my coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy
+    My coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy.
 </p>
 <p>
-    my design aesthetic centers around texture, contrast, <strong> color</strong>, and lines
+    My design aesthetic centers around texture, contrast, <strong> color</strong>, and lines.
 </p>
     <p>
-        as an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses
+        As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
     </p>
 
 </div>
