--- a/paintings.html
+++ b/paintings.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Paintings</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
     <h1>| &nbsp  paintings  &nbsp |</h1>
 
 <div class="container-fluid">
