--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 <a href="about.html"><h2>| &nbsp  elyse voegeli  &nbsp |</h2></a>
 
 <div class="container-fluid">
+  <div class="row row1">
+      <div class="col-md-4 container" id="ceramics">
+          <a href="https://seatuna.github.io/us-immigration-vis/"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
+          <div class="overlay">
+              <div class="text"> | thesis | </div>
+          </a>
+          </div>
+      </div>
+
+
+      <div class="col-md-4 container" id="paintings">
+          <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image" >
+          <div class="overlay">
+              <div class="text"> |  design  | </div>
+          </a>
+          </div>
+      </div>
+
+      <div class="col-md-4 container" id="photography">
+          <a href="https://seatuna.github.io/us-immigration-vis/"><img src="img/data_viz_crop.png" alt="a world map with countries colored by number of migrants" class="image" >
+          <div class="overlay">
+              <div class="text"> |  data viz  | </div>
+          </a>
+          </div>
+      </div>
+
+  </div>
     <div class="row row1">
         <div class="col-md-4 container" id="ceramics">
             <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
