added image for thesis

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <div class="container-fluid">
   <div class="row row1">
-      <div class="col-md-4 container" id="ceramics">
-          <a href="https://seatuna.github.io/us-immigration-vis/"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
+      <div class="col-md-4 container" id="thesis">
+          <a href="https://evoeges.github.io/pae"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
               <div class="text"> | thesis | </div>
           </a>
@@ -32,7 +32,7 @@
           </div>
       </div>
 
-      <div class="col-md-4 container" id="photography">
+      <div class="col-md-4 container" id="data_viz">
           <a href="https://seatuna.github.io/us-immigration-vis/"><img src="img/data_viz_crop.png" alt="a world map with countries colored by number of migrants" class="image" >
           <div class="overlay">
               <div class="text"> |  data viz  | </div>
