added design page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
       <div class="col-md-4 container" id="paintings">
-          <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image" >
+          <a href="design.html"> <img src="img/design_crop.png" alt="an image which says 'choose your pacperson' and 4 pacman avatars" class="image" >
           <div class="overlay">
               <div class="text"> |  design  | </div>
           </a>
