commented out in progress text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="about.html"><h2>| &nbsp  elyse voegeli  &nbsp |</h2></a>
 
 <div class="container-fluid">
-  <div class="row row1">
+<!--  <div class="row row1">
       <div class="col-md-4 container" id="thesis">
           <a href="https://evoeges.github.io/pae"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
@@ -24,7 +24,7 @@
       </div>
 
 
-      <div class="col-md-4 container" id="paintings">
+      <div class="col-md-4 container" id="design">
           <a href="design.html"> <img src="img/design_crop.png" alt="an image which says 'choose your pacperson' and 4 pacman avatars" class="image" >
           <div class="overlay">
               <div class="text"> |  design  | </div>
@@ -40,7 +40,7 @@
           </div>
       </div>
 
-  </div>
+  </div> -->
     <div class="row row1">
         <div class="col-md-4 container" id="ceramics">
             <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
