updated style for mobile

--- a/ceramics.html
+++ b/ceramics.html
@@ -13,7 +13,7 @@
 
     <h1>| &nbsp  ceramics  &nbsp |</h1>
 
-<div class="container-fluid">
+<div class="container-fluid art_pages">
     <div class="row row1">
         <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/crackle.JPG" alt="" class="image" >
