--- a/paintings.html
+++ b/paintings.html
@@ -13,7 +13,7 @@
 
     <h1>| &nbsp  paintings  &nbsp |</h1>
 
-<div class="container-fluid">
+<div class="container-fluid art_pages">
 
     <div class="row rowbottom align-items-center">
 
