--- a/photography.html
+++ b/photography.html
@@ -13,7 +13,7 @@
 
     <h1>| &nbsp  photography  &nbsp |</h1>
 
-<div class="container-fluid">
+<div class="container-fluid art_pages">
 
      <div class="row row4">
                 <div class="col-md-6 container" id="photography">
