--- a/about.html
+++ b/about.html
@@ -1,42 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <title>About</title>
+
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<h1>| &nbsp  about  &nbsp |</h1>
-
-<div class="text">
-<p>
-    I am a <strong> data analyst</strong> and <strong> visual artist </strong> pursuing a graduate degree in public policy at the harvard kennedy school.
-    </p>
-<p>
-    My coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy.
-</p>
-<p>
-    My design aesthetic centers around texture, contrast, <strong> color</strong>, and lines.
-</p>
-    <p>
-        As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
-    </p>
-
-</div>
+  <div class="container-fluid art_pages">
+    <div class="row">
+      <div class="col-md">
+        <h1>| &nbsp about &nbsp |</h1>
+      </div>
+    </div>
 
 
+    <div class="row">
+
+      <div class="col-md-3"></div>
+      <div class="col-md-6 about">
+        <p>
+          I am a <strong> data analyst</strong> and <strong> designer </strong> pursuing a graduate degree in public policy at the Harvard Kennedy School.
+
+        </p>
+        <p>
+          My coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy.
+        </p>
+        <p>
+          My design aesthetic centers around texture, contrast, <strong> color</strong>, and lines.
+        </p>
+        <p>
+          As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
+        </p>
+      </div>
+
+      <div class="col-md-3"></div>
+    </div>
+  </div>
 
 
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/d3.min.js"></script>
-<script src="js/d3-tip.js"></script>
-<script src="js/main.js"></script>
+
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/d3.min.js"></script>
+  <script src="js/d3-tip.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
+
 </html>
