--- a/about.html
+++ b/about.html
@@ -28,11 +28,9 @@
 
         </p>
         <p>
-          My coursework focuses on design, data visualization, and user experience at the intersection of tech and public policy.
+        I'm committed to making tech accessible, accountable, and delightful.
         </p>
-        <p>
-          My design aesthetic centers around texture, contrast, <strong> color</strong>, and lines.
-        </p>
+        
         <p>
           As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
         </p>
