updated about for mobile

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -30,7 +31,7 @@
         <p>
         I'm committed to making tech accessible, accountable, and delightful.
         </p>
-        
+
         <p>
           As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
         </p>
