--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Portfolio</title>
+  <title>Portfolio</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<a href="about.html"><h2>| &nbsp  elyse voegeli  &nbsp |</h2></a>
+  <a href="about.html">
+    <h2>| &nbsp elyse voegeli &nbsp |</h2>
+  </a>
 
-<div class="container-fluid">
-<!--  <div class="row row1">
+  <div class="container-fluid">
+    <!--  <div class="row row1">
       <div class="col-md-4 container" id="thesis">
           <a href="https://evoeges.github.io/pae"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
@@ -42,41 +46,42 @@
 
   </div> -->
     <div class="row row1">
-        <div class="col-md-4 container" id="ceramics">
-            <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
-            <div class="overlay">
-                <div class="text"> |  ceramics  | </div>
-            </a>
-            </div>
-        </div>
-
-
-        <div class="col-md-4 container" id="paintings">
-            <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image" >
-            <div class="overlay">
-                <div class="text"> |  paintings  | </div>
-            </a>
-            </div>
-        </div>
-
-        <div class="col-md-4 container" id="photography">
-            <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image" >
-            <div class="overlay">
-                <div class="text"> |  photography  | </div>
-            </a>
-            </div>
-        </div>
-
+      <div class="col-md-4 container" id="ceramics">
+        <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
+          <div class="overlay">
+            <div class="text"> | ceramics | </div>
+        </a>
+      </div>
     </div>
-</div>
 
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/d3.min.js"></script>
-<script src="js/d3-tip.js"></script>
-<script src="js/main.js"></script>
+    <div class="col-md-4 container" id="paintings">
+      <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
+        <div class="overlay">
+          <div class="text"> | paintings | </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-md-4 container" id="photography">
+    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+      <div class="overlay">
+        <div class="text"> | photography | </div>
+    </a>
+  </div>
+  </div>
+
+  </div>
+  </div>
+
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/d3.min.js"></script>
+  <script src="js/d3-tip.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
+
 </html>
