--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Portfolio</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,13 +19,27 @@
   </a>
 
   <div class="container-fluid">
-    <!--  <div class="row row1">
+    <div class="row">
+      <div class="col-md"></div>
       <div class="col-md-4 container" id="thesis">
-          <a href="https://evoeges.github.io/pae"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
+          <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
               <div class="text"> | thesis | </div>
           </a>
           </div>
+        </div>
+
+          <div class="col-md-4 container" id="photography">
+            <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+              <div class="overlay">
+                <div class="text"> | photography | </div>
+            </a>
+          </div>
+          </div>
+            <div class="col-md"></div>
+        </div>
+
+    <!--
       </div>
 
 
@@ -45,7 +60,8 @@
       </div>
 
   </div> -->
-    <div class="row row1">
+    <div class="row ">
+        <div class="col-md"></div>
       <div class="col-md-4 container" id="ceramics">
         <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
           <div class="overlay">
@@ -62,17 +78,14 @@
       </a>
     </div>
   </div>
-
-  <div class="col-md-4 container" id="photography">
-    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
-      <div class="overlay">
-        <div class="text"> | photography | </div>
-    </a>
+  <div class="col-md"></div>
   </div>
   </div>
 
-  </div>
-  </div>
+  <!--feather icons library-->
+<script>
+  feather.replace()
+</script>
 
 
   <script src="js/jquery.min.js"></script>
