added social media

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body>
@@ -35,6 +36,14 @@
         <p>
           As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
         </p>
+
+        <p> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram"></i></a></p>
+
       </div>
 
       <div class="col-md-3"></div>
@@ -51,6 +60,10 @@
   <script src="js/d3.min.js"></script>
   <script src="js/d3-tip.js"></script>
   <script src="js/main.js"></script>
+  <!--feather icons library-->
+<script>
+  feather.replace()
+</script>
 
 </body>
 
