--- a/openMRS.html
+++ b/openMRS.html
@@ -14,21 +14,33 @@
 
 <body>
 
-
-    <h2>| &nbsp OpenMRS New Developer Guide &nbsp |</h2>
-
-
   <div class="container-fluid">
+    <h1>| &nbsp OpenMRS New Developer Guide &nbsp |</h1>
+
     <div class="row">
-      <div class="col-md"></div>
-      <div class="col-md-4">
-        <h3> Problem</h3>
+      <div class="col"></div>
+      <div class="col-md-6">
+        <img src="img/OpenMRSbook.jpg" class="header_image">
+        <p> Open the <a href="http://devmanual.openmrs.org/en/" target="_blank">guide.</a> </p>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-md-6">
+        <h3> Problem </h3>
+        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
+        <h3> Solution </h3>
+        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
+        <h3> Method </h3>
+        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
+        <h3> Learnings </h3>
         <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
       </div>
-      <div class="col-md"></div>
+      <div class="col"></div>
     </div>
   </div>
-
 
 
   <!--feather icons library-->
