--- a/openMRS.html
+++ b/openMRS.html
@@ -8,45 +8,102 @@
   <title>OpenMRS</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="https://unpkg.com/feather-icons"></script>
+  <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp OpenMRS New Developer Guide &nbsp |</h1>
+    <h1>| &nbsp Opening Open Source &nbsp |</h1>
 
-    <div class="row">
+    <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
+        <a href="http://devmanual.openmrs.org/en/" target="_blank">
         <img src="img/OpenMRSbook.jpg" class="header_image">
-        <p> Open the <a href="http://devmanual.openmrs.org/en/" target="_blank">guide.</a> </p>
+      </a>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Client </h3>
+      </div>
+      <div class="col-md-4">
+        <div class="description_section">
+          <p> Open Medical Record System (OpenMRS) is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Problem </h3>
+      </div>
+      <div class="col-md-4">
+        <div class="description_section">
+          <p> How can we break down the barrier to entry for new open source software contributers and bring them into the OpenMRS Community?</p>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Solution </h3>
+      </div>
+      <div class="col-md-4">
+        <div class="description_section">
+          <p> A glossy new guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Process </h3>
+      </div>
+      <div class="col-md-4">
+        <div class="description_section">
+          <p> <strong> User Research </strong> In the three months leading up to the documentation sprint, I was an intern with  </p>
+          <p> <strong> Docs Sprint </strong> In September,
+          <p>You can read about my process <a href="https://evoegesopw.wordpress.com/" target="_blank"> here</a>.  </p>
+        </div>
       </div>
       <div class="col"></div>
     </div>
 
     <div class="row">
       <div class="col"></div>
-      <div class="col-md-6">
-        <h3> Problem </h3>
-        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
-        <h3> Solution </h3>
-        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
-        <h3> Method </h3>
-        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
+      <div class="col-md-2">
         <h3> Learnings </h3>
-        <p> How can we break down the barrier to entry for new contributers and bring them into the OpenMRS Community?</p>
+      </div>
+      <div class="col-md-4">
+        <div class="description_section">
+          <p> This was one of the first short-term independent projects I ever worked on. I had a steep learning curve with working remotely, managing my own time and schedule, and planning out the research direction.</p>
+        </div>
       </div>
       <div class="col"></div>
     </div>
+
   </div>
 
 
+
   <!--feather icons library-->
-<script>
-  feather.replace()
-</script>
+  <script>
+    feather.replace()
+  </script>
 
 
   <script src="js/jquery.min.js"></script>
