--- a/openMRS.html
+++ b/openMRS.html
@@ -22,7 +22,7 @@
       <div class="col"></div>
       <div class="col-md-6">
         <a href="http://devmanual.openmrs.org/en/" target="_blank">
-        <img src="img/OpenMRSbook.jpg" class="header_image">
+        <img src="img/openMRSscreenshot.png" class="header_image">
       </a>
       </div>
       <div class="col"></div>
@@ -34,9 +34,9 @@
         <h3> Client </h3>
       </div>
       <div class="col-md-4">
-        <div class="description_section">
-          <p> Open Medical Record System (OpenMRS) is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
-        </div>
+
+          <p> <a href="https://openmrs.org/" target="_blank"> OpenMRS </a> is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
+
       </div>
       <div class="col"></div>
     </div>
@@ -48,9 +48,9 @@
         <h3> Problem </h3>
       </div>
       <div class="col-md-4">
-        <div class="description_section">
+
           <p> How can we break down the barrier to entry for new open source software contributers and bring them into the OpenMRS Community?</p>
-        </div>
+
       </div>
       <div class="col"></div>
     </div>
@@ -61,9 +61,9 @@
         <h3> Solution </h3>
       </div>
       <div class="col-md-4">
-        <div class="description_section">
-          <p> A glossy new guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
-        </div>
+
+          <p> An online and print guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
+
       </div>
       <div class="col"></div>
     </div>
@@ -74,24 +74,43 @@
         <h3> Process </h3>
       </div>
       <div class="col-md-4">
-        <div class="description_section">
-          <p> <strong> User Research </strong> In the three months leading up to the documentation sprint, I was an intern with  </p>
-          <p> <strong> Docs Sprint </strong> In September,
+
+          <p> <strong> User Research </strong> From June to August 2013, I was an intern with the GNOME Outreach Project for Women. As an intern, I was partnered with OpenMRS to work on <strong>restructuring their documentation to make it more user friendly</strong>. I interviewed community members with experiences ranging from brand new to more that 20 years of experience. From these interviews, I created templates for documentation pages and a plan for restructuring the documentation wiki used by OpenMRS.  </p>
+          <p> <strong> Docs Sprint </strong> In September, I joined my teammates for Google Summer of Code Doc Camp in Mountainview California. Over the course of the 5 day sprint, we created the OpenMRS New Developer Guide.
           <p>You can read about my process <a href="https://evoegesopw.wordpress.com/" target="_blank"> here</a>.  </p>
-        </div>
+
       </div>
       <div class="col"></div>
     </div>
 
-    <div class="row">
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Team </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p>Michael Downey<br>
+          Eric Holscher<br>
+          Suranga Nath Kasthurirathne<br>
+          Daniel Kayiwa<br>
+          Jordan Kellerstrass</p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+
+
+    <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
         <h3> Learnings </h3>
       </div>
       <div class="col-md-4">
-        <div class="description_section">
+
           <p> This was one of the first short-term independent projects I ever worked on. I had a steep learning curve with working remotely, managing my own time and schedule, and planning out the research direction.</p>
-        </div>
+
       </div>
       <div class="col"></div>
     </div>
