added code enforcement page

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>OpenMRS</title>
+  <title>Code Enforcement</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
@@ -16,13 +16,13 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Opening Open Source &nbsp |</h1>
+    <h1>| &nbsp UX of Trash Doesn't Have to be Trashy &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
-        <a href="http://devmanual.openmrs.org/en/" target="_blank">
-        <img src="img/openMRSscreenshot.PNG" class="header_image">
+        <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">
+        <img src="img/" class="header_image">
       </a>
       </div>
       <div class="col"></div>
@@ -35,7 +35,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> <a href="https://openmrs.org/" target="_blank"> OpenMRS </a> is a Free and Open Source Software which provides medical record systems for use in resource scarce environments (over 20 countries worldwide).</p>
+          <p> <a href="https://www.boston.gov/departments/public-works/how-we-keep-boston-clean" target="_blank"> Boston Code Enforcement </a> is a division of the Department of Public Works which monitors the city and gives out tickets for code violations (for example, improper shoveling of snow).</p>
 
       </div>
       <div class="col"></div>
@@ -49,7 +49,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> How can we break down the barrier to entry for new open source software contributers and bring them into the OpenMRS Community?</p>
+          <p> How might we spark behavior change in Boston Residents resulting in fewer tickets given and more tickets paid?</p>
 
       </div>
       <div class="col"></div>
@@ -62,7 +62,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> An online and print guide to getting started with OpenMRS, which was later converted into a gitbook. View the guide <a href="http://devmanual.openmrs.org/en/" target="_blank">here</a>.</p>
+          <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an education insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
       </div>
       <div class="col"></div>
@@ -75,10 +75,9 @@
       </div>
       <div class="col-md-4">
 
-          <p> <strong> User Research </strong> From June to August 2013, I was an intern with the GNOME Outreach Project for Women. As an intern, I was partnered with OpenMRS to work on <strong>restructuring their documentation to make it more user friendly</strong>. I interviewed community members with experiences ranging from brand new to more that 20 years of experience. From these interviews, I created templates for documentation pages and a plan for restructuring the documentation wiki used by OpenMRS.  </p>
-          <p> <strong> Docs Sprint </strong> In September, I joined my teammates for Google Summer of Code Doc Camp in Mountainview California. Over the course of the 5 day sprint, we created the OpenMRS New Developer Guide.
-          <p>You can read about my process <a href="https://evoegesopw.wordpress.com/" target="_blank"> here</a>.  </p>
-
+          <p> <strong> User Research </strong> From January through March 2019 we did background research through data analysis, best practices in other cities, ride alongs with officers, and interviews/observations with users (Boston residents) interacting with Code Enforcement.  </p>
+          <p> <strong> Prototyping </strong> In March through May, we brainstormed solutions and prototyped our 5 touchpoints. We created lo-fi versions of each idea and tested them in the real world, updating and improving each time. Some of the designs went through as many as 8 iterations and 58 user interviews.  </p>
+          <p> In May we settled on our final versions and handed them off to the city where they'll be rolled out to over 600,000 Boston residents. </p>
       </div>
       <div class="col"></div>
     </div>
@@ -90,11 +89,10 @@
       </div>
       <div class="col-md-4">
 
-          <p>Michael Downey<br>
-          Eric Holscher<br>
-          Suranga Nath Kasthurirathne<br>
-          Daniel Kayiwa<br>
-          Jordan Kellerstrass</p>
+          <p>Clare Herceg<br>
+          Naeha Rashid<br>
+          Ariana Soto<br>
+          Clarisa Yerovi</p>
 
       </div>
       <div class="col"></div>
@@ -109,7 +107,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> This was one of the first short-term independent projects I ever worked on. I had a steep learning curve with working remotely, managing my own time and schedule, and planning out the research direction.</p>
+          <p> This project was a careful balance between practical solutions and big-picture systems thinking. Balancing the needs of the client while keeping the end user in mind was a rewarding challenge.</p>
 
       </div>
       <div class="col"></div>
