added code enforcement image

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -16,13 +16,13 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp UX of Trash Doesn't Have to be Trashy &nbsp |</h1>
+    <h1>| &nbsp Redesigning the UX of Tickets &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
         <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">
-        <img src="img/" class="header_image">
+        <img src="img/chris.png" class="header_image">
       </a>
       </div>
       <div class="col"></div>
