added openMRS and code enforcement to the home page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,29 @@
           <div class="overlay">
               <div class="text"> | thesis | </div>
           </a>
+        </div>
+        </div>
+
+        <div class="col-md-4 container" id="codeEnforcement">
+            <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right'" class="image">
+            <div class="overlay">
+                <div class="text"> | redesigning the UX of tickets | </div>
+            </a>
+            </div>
           </div>
         </div>
+
+
+        <div class="row">
+          <div class="col-md"></div>
+
+          <div class="col-md-4 container" id="openMRS">
+              <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
+              <div class="overlay">
+                  <div class="text"> | opening open source | </div>
+              </a>
+              </div>
+            </div>
 
           <div class="col-md-4 container" id="photography">
             <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
@@ -39,27 +60,6 @@
             <div class="col-md"></div>
         </div>
 
-    <!--
-      </div>
-
-
-      <div class="col-md-4 container" id="design">
-          <a href="design.html"> <img src="img/design_crop.png" alt="an image which says 'choose your pacperson' and 4 pacman avatars" class="image" >
-          <div class="overlay">
-              <div class="text"> |  design  | </div>
-          </a>
-          </div>
-      </div>
-
-      <div class="col-md-4 container" id="data_viz">
-          <a href="https://seatuna.github.io/us-immigration-vis/"><img src="img/data_viz_crop.png" alt="a world map with countries colored by number of migrants" class="image" >
-          <div class="overlay">
-              <div class="text"> |  data viz  | </div>
-          </a>
-          </div>
-      </div>
-
-  </div> -->
     <div class="row ">
         <div class="col-md"></div>
       <div class="col-md-4 container" id="ceramics">
